# ai-process-readiness2-automation

./: .replit  app.py  packages.txt  pyproject.toml  replit.md  requirements.txt  run_app.py  run_test_pdf.py  streamlit_app.py  test_email.py  test_pdf.py  tests  users.db
.github/workflows/: ci.yml  pytest.yml  python-tests.yml
.streamlit/: config.toml
attached_assets/: Pasted--Paste-this-into-a-shell-in-Replit-or-your-terminal-set-e-PROJECT-ai-process-readiness-rm--1760048713898_1760048713901.txt  Pasted-I-need-to-create-a-downloadable-HTML-report-not-PDF-that-summarizes-the-assessment-results-in-a-cl-1764576823841_1764576823843.txt  Pasted-I-need-to-update-my-AI-Readiness-Assessment-app-scoring-logic-with-a-new-simplified-approach-SCORI-1764531176704_1764531176705.txt  Pasted-I-need-to-update-my-AI-Readiness-Assessment-app-scoring-logic-with-a-simplified-approach-SCORING-1764504786881_1764504786882.txt  Progress visual_1760128836900.pptx  Report_Changes2_1764239233049.pptx  SIX DIMENSIONS OF AI_1760125812222.docx
data/: benchmarks.py  dimensions.py
db/: models.py  operations.py  setup_email_auth.py  users.db
tests/: data_dimensions.py  test_pdf_generator.py  test_scoring.py
utils/: __init__.py  ai_chat.py  email_auth.py  gmail_sender.py  html_report_generator.py  pdf_generator.py  scoring.py  test_pdf.py
